# easy-deploy

./: .deploy.env.example  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  deploy.sh
api/: Cargo.toml
api/assets/: app.css  app.js
api/migrations/: 0001_init.sql  0002_auth_rbac.sql  0003_profile_sessions_permissions.sql  0004_nodes.sql  0005_apps.sql  0006_tasks.sql  0007_task_actions.sql  0008_health_checks.sql  0009_binary_deploy.sql  0010_node_management_description.sql  0011_services_logs_permission.sql  0012_task_phase.sql  0013_node_probe_details.sql  0014_account_lockout.sql  0015_node_capabilities.sql  0016_task_node_results.sql  0017_deploy_strategy.sql  0018_active_deploy_task_guard.sql  0019_binary_blue_green_config.sql  0020_binary_proxy_switch.sql  0021_node_proxy_capabilities.sql  0022_rbac_action_permissions.sql  0023_platform_settings.sql  0024_node_install_tasks.sql  0025_runtime_state_last_task.sql  0026_node_credentials.sql  0027_rbac_cleanup.sql  0028_api_tokens.sql  0029_runtime_config_revisions.sql  0030_binary_artifact_version_code.sql  0031_normalize_app_ready_status.sql  0032_normalize_app_management_status.sql  0033_git_source_release.sql  0034_remove_git_source_release.sql  0035_event_logs.sql  0036_app_environment.sql  0037_task_steps.sql  0038_compose_release_queue.sql  0039_task_phases.sql  0040_release_publish_controls.sql  (+15 more)
api/src/: application_config.rs  application_releases.rs  apps.rs  artifact_storage.rs  catalog.rs  deploy.rs  deployment_console.rs  deployment_orchestrator.rs  deployment_retention.rs  deployment_runtime.rs  events.rs  health.rs  host_metrics.rs  lib.rs  main.rs  maintenance.rs  migrations.rs  node_credentials.rs  nodes.rs  platform.rs  runtimefs.rs  secret_config.rs  settings.rs  tasks.rs  text.rs
api/src/auth/: mod.rs  password.rs  permissions.rs  service.rs  session_store.rs  token.rs
api/src/web/: mod.rs  templates.rs
api/templates/: accounts.html  api_tokens.html  app_detail.html  application_deploy.html  apps.html  artifacts.html  audit.html  dashboard.html  deploy_confirm.html  deployment_access.html  deployment_history.html  events.html  layout.html  login.html  node_credentials.html  node_detail.html  nodes.html  permissions.html  profile.html  roles.html  service_logs.html  services.html  sessions.html  settings.html  simple_page.html  task_detail.html  tasks.html  templates.html
docs/brainstorms/: 2026-06-23-compose-only-deployment-requirements.md
docs/plans/: 2026-06-01-core-deployment-platform-modules.md  2026-06-23-compose-only-release-pipeline.md  2026-07-03-001-feat-qfy-sc-template-alignment-plan.md  2026-07-05-001-test-valuable-coverage-plan.md  2026-07-10-001-fix-release-artifact-reliability-closure-plan.md  2026-07-11-001-multi-unit-application-release-plan.md
docs/runbooks/: api-migrations.md  compose-template-contract.md  systemd-deploy.md
e2e/: Cargo.toml
e2e/src/: lib.rs  main.rs
e2e/tests/: smoke.rs
scripts/: deploy-systemd.sh
