[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
askama = { workspace = true, features = ["derive"] }
axum = { workspace = true, features = ["multipart"] }
argon2.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
encoding_rs.workspace = true
flate2.workspace = true
fs2.workspace = true
hmac.workspace = true
rand_core.workspace = true
reqwest = { workspace = true, features = ["rustls-tls", "stream"] }
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
sha1.workspace = true
sha2.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
tar.workspace = true
tokio = { workspace = true, features = ["macros", "net", "process", "rt-multi-thread", "signal", "time"] }
tower-http = { workspace = true, features = ["trace"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower = { workspace = true, features = ["util"] }
