[package]
name = "e2e"
version.workspace = true
edition.workspace = true

[dependencies]
api = { path = "../api" }
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
reqwest = { workspace = true, features = ["cookies", "multipart", "rustls-tls"], default-features = false }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread"] }
